{
    "name": "TwoFingerActions",
    "maps": [
        {
            "name": "Drag",
            "id": "6940ac81-9360-4160-81a3-b86ad370b4c5",
            "actions": [
                {
                    "name": "MoveLeftHand",
                    "type": "Value",
                    "id": "9c541196-55bb-4c56-84a0-5951f06c4236",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveRightHand",
                    "type": "Value",
                    "id": "ea5f3561-c40a-4c46-b2af-5d2ac110f0f1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "02f83d93-fb10-4657-82a8-cd57e27c8bef",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Value",
                    "id": "5e0fa9b9-371e-467c-86d9-b629009db8cd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ae55bbf8-50bb-424e-854b-202c08d1455e",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeftHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b008982e-dd2f-473f-8229-5600620f77d7",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRightHand",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "925a5b65-4a60-421c-bfbf-579552bb057a",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "838c3c52-68b3-4ac1-9051-cad2251d4e59",
                    "path": "<Touchscreen>/primaryTouch/startPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}